tests/parsing/smtlib/poly/errors/181_par_arguments.expected
File "tests/parsing/smtlib/poly/errors/181_par_arguments.psmt2", line 2, character 28-29:
2 | (declare-fun foo (par (A) ( _
                                ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a sort or a closing parenthesis.
